--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -58,13 +58,15 @@
                 </mat-form-field>
             </div>
 
-            <mat-slide-toggle [ngModel]="teamEvent?.isTeamAllocations" (ngModelChange)="updateTeamAllocations($event)">
+            <mat-slide-toggle [ngModel]="teamEvent?.isTeamAllocations" (ngModelChange)="updateTeamAllocations($event)"
+                data-cy="teamAllocationsToggle">
                 Team Allocations
             </mat-slide-toggle>
             <div *ngIf="teamEvent?.isTeamAllocations">
                 <div fxLayout='row' fxLayoutAlign="stretch stretch" *ngFor="let team of subTeams; let i = index">
                     <button mat-flat-button mat-button fxFlex="50%" [matMenuTriggerFor]="teamColorMenu"
-                        [matMenuTriggerData]="{index: i}" [style]="'height: 56px; background-color:'+team.color">
+                        [matMenuTriggerData]="{index: i}" [style]="'height: 56px; background-color:'+team.color"
+                        data-cy="teamColorMenuBtn">
                         {{team.color}}
                     </button>
                     <span fxFlex="1%"></span>
@@ -77,14 +79,14 @@
                     </button>
                 </div>
                 <button mat-raised-button [matMenuTriggerFor]="teamColorMenu"
-                    [matMenuTriggerData]="{index: subTeams.length}" (click)="subTeamsAdd()">
+                    [matMenuTriggerData]="{index: subTeams.length}" (click)="subTeamsAdd()" data-cy="addTeamBtn">
                     <mat-icon inline=true>add</mat-icon>
                     Add Team
                 </button>
                 <mat-menu #teamColorMenu="matMenu" yPosition="above">
                     <ng-template matMenuContent let-index="index">
                         <button mat-fab *ngFor="let teamColor of teamColors" [style]="'background-color:'+teamColor"
-                            (click)="subTeamsUpdate(index, {color: teamColor})">
+                            (click)="subTeamsUpdate(index, {color: teamColor})" data-cy="teamColorSelectBtn">
                         </button>
                     </ng-template>
                 </mat-menu>
@@ -262,7 +264,7 @@
 <mat-menu #teamPickMenu="matMenu" yPosition="above">
     <ng-template matMenuContent let-index="index">
         <button mat-fab *ngFor="let team of subTeams" [style]="'background-color:'+team.color"
-            (click)="subTeamColorUpdate(team.color)">
+            (click)="subTeamColorUpdate(team.color)" data-cy="setTeamColorBtn">
         </button>
     </ng-template>
 </mat-menu>
