disabled email to team

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -226,6 +226,10 @@
                         <mat-icon>file_copy</mat-icon>
                         DUPLICATE
                     </button>
+                    <!-- <button mat-menu-item (click)="sendEmailToTeam()">
+                        <mat-icon>email</mat-icon>
+                        EMAIL TO TEAM
+                    </button> -->
                 </mat-menu>
             </mat-card-actions>
         </div>
