--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -114,24 +114,33 @@
                         <img src="https://images.ctfassets.net/fzn2n1nzq965/4M6d6BSWzlgsrJx8rdZb0I/733f37ef69b5ca1d3d33e127184f4ce4/Powered_by_Stripe.svg?q=80&amp;w=1082"
                             alt="Powered by Stripe" width="150" height="34" loading="lazy">
                     </a>
-                    <div *ngIf="isStripeAccount && !user?.isStripeAccountEnabled">
-                        <h3>Your Stripe account is not activated.</h3>
-                        <p>
-                            Please complete Stripe onboarding by providing required information.
-                            Use <span class="stripe-actionRequired-button">
-                                Action required
-                                <svg aria-hidden="true" height="12" width="12" viewBox="0 0 16 16"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="m10.115 1.308 5.635 11.269A2.365 2.365 0 0 1 13.634 16H2.365A2.365 2.365 0 0 1 .25 12.577L5.884 1.308a2.365 2.365 0 0 1 4.231 0zM8 10.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM8 9c.552 0 1-.32 1-.714V4.714C9 4.32 8.552 4 8 4s-1 .32-1 .714v3.572C7 8.68 7.448 9 8 9z"
-                                        fill-rule="evenodd"></path>
-                                </svg>
-                            </span> button on your Stripe dashboard.
-                        </p>
-                        <a href="https://dashboard.stripe.com/account/status" mat-raised-button class="stripe-button">
-                            <mat-icon inline=true>account_balance</mat-icon>
-                            Complete Stripe Onboarding
-                        </a>
+                    <div *ngIf="isStripeAccount">
+                        <div *ngIf="isActivatingStripeAccount">
+                            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                            <p>
+                                Your Stripe account is being activated...
+                            </p>
+                        </div>
+                        <div *ngIf="!isActivatingStripeAccount && !user?.isStripeAccountEnabled">
+                            <h3>Your Stripe account is not activated.</h3>
+                            <p>
+                                Please complete Stripe onboarding by providing required information.
+                                Use <span class="stripe-actionRequired-button">
+                                    Action required
+                                    <svg aria-hidden="true" height="12" width="12" viewBox="0 0 16 16"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m10.115 1.308 5.635 11.269A2.365 2.365 0 0 1 13.634 16H2.365A2.365 2.365 0 0 1 .25 12.577L5.884 1.308a2.365 2.365 0 0 1 4.231 0zM8 10.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM8 9c.552 0 1-.32 1-.714V4.714C9 4.32 8.552 4 8 4s-1 .32-1 .714v3.572C7 8.68 7.448 9 8 9z"
+                                            fill-rule="evenodd"></path>
+                                    </svg>
+                                </span> button on your Stripe dashboard.
+                            </p>
+                            <a href="https://dashboard.stripe.com/account/status" mat-raised-button
+                                class="stripe-button">
+                                <mat-icon inline=true>account_balance</mat-icon>
+                                Complete Stripe Onboarding
+                            </a>
+                        </div>
                     </div>
 
                     <div *ngIf="!isStripeAccount">
